Tuba audio pass WIP
[CL 2931043 by Jim Brown in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -1,40 +1,6 @@
 [URL]
 GameName=UnrealTournament
 
-[/Script/Engine.PhysicsSettings]
-+PhysicalSurfaces=(Type=SurfaceType1, Name=Dirt)
-+PhysicalSurfaces=(Type=SurfaceType2, Name=Metal)
-+PhysicalSurfaces=(Type=SurfaceType3, Name=Wood)
-+PhysicalSurfaces=(Type=SurfaceType4, Name=Stone)
-+PhysicalSurfaces=(Type=SurfaceType5, Name=Glass)
-+PhysicalSurfaces=(Type=SurfaceType6, Name=Water)
-+PhysicalSurfaces=(Type=SurfaceType7, Name=Slime)
-+PhysicalSurfaces=(Type=SurfaceType8, Name=Lava)
-+PhysicalSurfaces=(Type=SurfaceType9, Name=Energy)
-+PhysicalSurfaces=(Type=SurfaceType10, Name=Plastic)
-+PhysicalSurfaces=(Type=SurfaceType11, Name=Rubber)
-+PhysicalSurfaces=(Type=SurfaceType12, Name=Grass)
-+PhysicalSurfaces=(Type=SurfaceType13, Name=Flesh_Human)
-+PhysicalSurfaces=(Type=SurfaceType14, Name=Flesh_Robot)
-+PhysicalSurfaces=(Type=SurfaceType15, Name=Flesh_Necris)
-+PhysicalSurfaces=(Type=SurfaceType16, Name=Flesh_Skaarj)
-+PhysicalSurfaces=(Type=SurfaceType17, Name=Flesh_Krall)
-+PhysicalSurfaces,(Type=SurfaceType18, Name=Flesh_Krall)
-+PhysicalSurfaces=(Type=SurfaceType19, Name=Gib_Human)
-+PhysicalSurfaces=(Type=SurfaceType20, Name=Gib_Robot)
-+PhysicalSurfaces=(Type=SurfaceType21, Name=Gib_Necris)
-+PhysicalSurfaces=(Type=SurfaceType22, Name=Gib_Skaarj)
-+PhysicalSurfaces=(Type=SurfaceType23, Name=Gib_Krall)
-+PhysicalSurfaces=(Type=SurfaceType24, Name=Vehicle)
-+PhysicalSurfaces=(Type=SurfaceType25, Name=Snow)
-+PhysicalSurfaces=(Type=SurfaceType26, Name=Mud)
-+PhysicalSurfaces=(Type=SurfaceType27, Name=Nanoblack)
-+PhysicalSurfaces=(Type=SurfaceType28, Name=Oil)
-+PhysicalSurfaces=(Type=SurfaceType29, Name=Armor)
-+PhysicalSurfaces=(Type=SurfaceType30, Name=ShieldBelt)
-+PhysicalSurfaces=(Type=SurfaceType31, Name=Gravel)
-+PhysicalSurfaces=(Type=SurfaceType32, Name=BrokenGlass)
-
 [/Script/Engine.Engine]
 TinyFontName=/Engine/EngineFonts/TinyFont.TinyFont
 SmallFontName=/Engine/EngineFonts/SmallFont.SmallFont
@@ -122,11 +88,6 @@ AgentMaxHeight=216.f
 AgentMaxStepHeight=51.f
 AgentMaxSlope=44.f
 CellSize=18.f
-
-[/Script/Engine.PhysicsSettings]
-DefaultTerminalVelocity=7000.0
-DefaultGravityZ=-2154.0
-bEnableKinematicContacts=False
 
 [/Script/UnrealTournament.UTGameEngine]
 FrameRateCap=120
@@ -400,3 +361,69 @@ BeaconConnectionTimeout=45.0
 [OnlineSubsystemMcp.OnlineIdentityMcp]
 bShouldReconnectXmpp=true
 RefreshTokenTheshold=7200
+
+[/Script/Engine.PhysicsSettings]
+DefaultGravityZ=-2154.000000
+DefaultTerminalVelocity=7000.000000
+DefaultFluidFriction=0.300000
+RagdollAggregateThreshold=4
+TriangleMeshTriangleMinAreaThreshold=5.000000
+bEnableAsyncScene=False
+bEnableShapeSharing=False
+bEnablePCM=False
+bWarnMissingLocks=True
+bEnable2DPhysics=False
+LockedAxis=Invalid
+DefaultDegreesOfFreedom=Full3D
+BounceThresholdVelocity=200.000000
+FrictionCombineMode=Average
+RestitutionCombineMode=Average
+MaxAngularVelocity=3600.000000
+MaxDepenetrationVelocity=0.000000
+bSimulateSkeletalMeshOnDedicatedServer=True
+bDefaultHasComplexCollision=True
+bSuppressFaceRemapTable=False
+bDisableActiveTransforms=False
+bDisableCCD=False
+MaxPhysicsDeltaTime=0.033333
+bSubstepping=False
+bSubsteppingAsync=False
+MaxSubstepDeltaTime=0.016667
+MaxSubsteps=6
+SyncSceneSmoothingFactor=0.000000
+AsyncSceneSmoothingFactor=0.990000
+InitialAverageFrameRate=0.016667
++PhysicalSurfaces=(Type=SurfaceType1,Name="Dirt")
++PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
++PhysicalSurfaces=(Type=SurfaceType3,Name="Wood")
++PhysicalSurfaces=(Type=SurfaceType4,Name="Stone")
++PhysicalSurfaces=(Type=SurfaceType5,Name="Glass")
++PhysicalSurfaces=(Type=SurfaceType6,Name="Water")
++PhysicalSurfaces=(Type=SurfaceType7,Name="Slime")
++PhysicalSurfaces=(Type=SurfaceType8,Name="Lava")
++PhysicalSurfaces=(Type=SurfaceType9,Name="Energy")
++PhysicalSurfaces=(Type=SurfaceType10,Name="Plastic")
++PhysicalSurfaces=(Type=SurfaceType11,Name="Rubber")
++PhysicalSurfaces=(Type=SurfaceType12,Name="Grass")
++PhysicalSurfaces=(Type=SurfaceType13,Name="Flesh_Human")
++PhysicalSurfaces=(Type=SurfaceType14,Name="Flesh_Robot")
++PhysicalSurfaces=(Type=SurfaceType15,Name="Flesh_Necris")
++PhysicalSurfaces=(Type=SurfaceType16,Name="Flesh_Skaarj")
++PhysicalSurfaces=(Type=SurfaceType17,Name="Sand01")
++PhysicalSurfaces=(Type=SurfaceType19,Name="Gib_Human")
++PhysicalSurfaces=(Type=SurfaceType20,Name="Gib_Robot")
++PhysicalSurfaces=(Type=SurfaceType21,Name="Gib_Necris")
++PhysicalSurfaces=(Type=SurfaceType22,Name="Gib_Skaarj")
++PhysicalSurfaces=(Type=SurfaceType23,Name="Sand")
++PhysicalSurfaces=(Type=SurfaceType24,Name="Vehicle")
++PhysicalSurfaces=(Type=SurfaceType25,Name="Snow")
++PhysicalSurfaces=(Type=SurfaceType26,Name="Mud")
++PhysicalSurfaces=(Type=SurfaceType27,Name="Nanoblack")
++PhysicalSurfaces=(Type=SurfaceType28,Name="Oil")
++PhysicalSurfaces=(Type=SurfaceType29,Name="Armor")
++PhysicalSurfaces=(Type=SurfaceType30,Name="ShieldBelt")
++PhysicalSurfaces=(Type=SurfaceType31,Name="Gravel")
++PhysicalSurfaces=(Type=SurfaceType32,Name="BrokenGlass")
++PhysicalSurfaces=(Type=SurfaceType32,Name="Sand")
+
+
