--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -199,7 +199,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_ConsoleMessages"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_GameMessages"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
-+RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
+;RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTScoreboard"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
 
@@ -213,7 +213,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_ConsoleMessages"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_GameMessages"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
-+RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
+;RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
 
 [/Script/UnrealTournament.UTHUD_TeamDM]
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_Paperdoll.bpHW_Paperdoll_C"
@@ -230,7 +230,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_ConsoleMessages"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_GameMessages"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
-+RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
+;RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTTeamScoreboard"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
 
@@ -252,7 +252,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_ConsoleMessages"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_GameMessages"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
-+RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
+;RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTDuelScoreboard"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
 
@@ -271,7 +271,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_ConsoleMessages"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_GameMessages"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
-+RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_SpectatorShowdown"
+;RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_SpectatorShowdown"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
 
 [/Script/UnrealTournament.UTHUD_CTF]
@@ -288,7 +288,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_ConsoleMessages"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_GameMessages"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
-+RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
+;RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTCTFScoreboard"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Intermission"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHudWidget_LivesRemaining"
@@ -401,26 +401,25 @@ bTestDailyChallenges=false
 +Playlist=(PlaylistId=0,MaxTeamCount=2,MaxTeamSize=2,MaxPartySize=2,ExtraCommandline="?GoalScore=1",GameMode="TEAMSHOWDOWN",TeamEloRating="RankedShowdownSkillRating",MapNames=("/Game/RestrictedAssets/Maps/DM-Chill","/Game/RestrictedAssets/Maps/WIP/DM-Focus","/Game/RestrictedAssets/Maps/WIP/DM-Temple","/Game/RestrictedAssets/Maps/WIP/DM-Cannon"))
 
 [/Script/UnrealTournament.UTGauntletGame]
-+AvailableLoadout=(ItemTag="ImpactHammer",ItemClassStringRef="/Game/RestrictedAssets/Weapons/ImpactHammer/BP_ImpactHammer.BP_ImpactHammer_C", RoundMask=255,InitialCost=0)
-+AvailableLoadout=(ItemTag="Enforcer",ItemClassStringRef="/Game/RestrictedAssets/Weapons/Enforcer/Enforcer.Enforcer_C", RoundMask=255,InitialCost=2000)
-+AvailableLoadout=(ItemTag="LinkGun",ItemClassStringRef="/Game/RestrictedAssets/Weapons/LinkGun/BP_LinkGun.BP_LinkGun_C", RoundMask=255,InitialCost=3000)
-+AvailableLoadout=(ItemTag="MiniGun",ItemClassStringRef="/Game/RestrictedAssets/Weapons/Minigun/BP_Minigun.BP_Minigun_C", RoundMask=255,InitialCost=5000)
-+AvailableLoadout=(ItemTag="BioRifle",ItemClassStringRef="/Game/RestrictedAssets/Weapons/BioRifle/BP_BioLauncher.BP_BioLauncher_C", RoundMask=255,InitialCost=3000)
-+AvailableLoadout=(ItemTag="FlakCannon",ItemClassStringRef="/Game/RestrictedAssets/Weapons/Flak/BP_FlakCannon.BP_FlakCannon_C", RoundMask=255,InitialCost=5000)
-+AvailableLoadout=(ItemTag="ShockRifle",ItemClassStringRef="/Game/RestrictedAssets/Weapons/ShockRifle/ShockRifle.ShockRifle_C", RoundMask=255,InitialCost=4000)
-+AvailableLoadout=(ItemTag="RocketLauncher",ItemClassStringRef="/Game/RestrictedAssets/Weapons/RocketLauncher/BP_RocketLauncher.BP_RocketLauncher_C", RoundMask=255,InitialCost=6000)
-+AvailableLoadout=(ItemTag="SniperRifle",ItemClassStringRef="/Game/RestrictedAssets/Weapons/Sniper/BP_Sniper.BP_Sniper_C", RoundMask=255,InitialCost=7000)
-+AvailableLoadout=(ItemTag="Redeemer",ItemClassStringRef="/Game/RestrictedAssets/Weapons/Redeemer/BP_Redeemer.BP_Redeemer_C", RoundMask=255,InitialCost=15000)
-+AvailableLoadout=(ItemTag="Translocator",ItemClassStringRef="/Game/RestrictedAssets/Weapons/Translocator/BP_Translocator.BP_Translocator_C", RoundMask=255,InitialCost=8000)
-+AvailableLoadout=(ItemTag="ArmorChest",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Armor/Armor_Chest.Armor_Chest_C", RoundMask=255,InitialCost=1500)
-+AvailableLoadout=(ItemTag="ArmorHelmet",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Armor/Armor_Helmet.Armor_Helmet_C", RoundMask=255,InitialCost=800)
-+AvailableLoadout=(ItemTag="ArmorShieldBelt",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Armor/Armor_ShieldBelt.Armor_ShieldBelt_C", RoundMask=255,InitialCost=6000)
-+AvailableLoadout=(ItemTag="ArmorThighpads",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Armor/Armor_ThighPads.Armor_ThighPads_C", RoundMask=255,InitialCost=800)
-+AvailableLoadout=(ItemTag="JumpBoots",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Powerups/BP_JumpBoots.BP_JumpBoots_C", RoundMask=255,InitialCost=5000)
-+AvailableLoadout=(ItemTag="BerserkPowerup",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Powerups/BP_Berserk.BP_Berserk_C", RoundMask=255,InitialCost=12000)
-+AvailableLoadout=(ItemTag="InvisPowerup",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Powerups/BP_Invis.BP_Invis_C", RoundMask=255,InitialCost=12000)
-+AvailableLoadout=(ItemTag="AmpPowerup",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Powerups/BP_UDamage.BP_UDamage_C", RoundMask=255,InitialCost=12000)
-+AvailableLoadout=(ItemTag="KegPowerup",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Health/Health_Large.Health_Large_C", RoundMask=255,InitialCost=9000)
++AvailableLoadout=(ItemTag="ImpactHammer",ItemClassStringRef="/Game/RestrictedAssets/Weapons/ImpactHammer/BP_ImpactHammer.BP_ImpactHammer_C", RoundMask=1,InitialCost=0,bDefaultInclude=true)
++AvailableLoadout=(ItemTag="Enforcer",ItemClassStringRef="/Game/RestrictedAssets/Weapons/Enforcer/Enforcer.Enforcer_C", RoundMask=0,InitialCost=0,bDefaultInclude=true)
++AvailableLoadout=(ItemTag="LinkGun",ItemClassStringRef="/Game/RestrictedAssets/Weapons/LinkGun/BP_LinkGun.BP_LinkGun_C", RoundMask=0,InitialCost=3000)
++AvailableLoadout=(ItemTag="MiniGun",ItemClassStringRef="/Game/RestrictedAssets/Weapons/Minigun/BP_Minigun.BP_Minigun_C", RoundMask=0,InitialCost=6000)
++AvailableLoadout=(ItemTag="BioRifle",ItemClassStringRef="/Game/RestrictedAssets/Weapons/BioRifle/BP_BioLauncher.BP_BioLauncher_C", RoundMask=0,InitialCost=3000)
++AvailableLoadout=(ItemTag="FlakCannon",ItemClassStringRef="/Game/RestrictedAssets/Weapons/Flak/BP_FlakCannon.BP_FlakCannon_C", RoundMask=0,InitialCost=6000)
++AvailableLoadout=(ItemTag="ShockRifle",ItemClassStringRef="/Game/RestrictedAssets/Weapons/ShockRifle/ShockRifle.ShockRifle_C", RoundMask=0,InitialCost=8000)
++AvailableLoadout=(ItemTag="RocketLauncher",ItemClassStringRef="/Game/RestrictedAssets/Weapons/RocketLauncher/BP_RocketLauncher.BP_RocketLauncher_C", RoundMask=0,InitialCost=8000)
++AvailableLoadout=(ItemTag="SniperRifle",ItemClassStringRef="/Game/RestrictedAssets/Weapons/Sniper/BP_Sniper.BP_Sniper_C", RoundMask=0,InitialCost=9000)
++AvailableLoadout=(ItemTag="Redeemer",ItemClassStringRef="/Game/RestrictedAssets/Weapons/Redeemer/BP_Redeemer.BP_Redeemer_C", RoundMask=1,InitialCost=20000)
++AvailableLoadout=(ItemTag="Translocator",ItemClassStringRef="/Game/RestrictedAssets/Weapons/Translocator/BP_Translocator.BP_Translocator_C", RoundMask=1,InitialCost=9000)
++AvailableLoadout=(ItemTag="ArmorChest",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Armor/Armor_Chest.Armor_Chest_C", RoundMask=1,InitialCost=5000)
++AvailableLoadout=(ItemTag="ArmorShieldBelt",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Armor/Armor_ShieldBelt.Armor_ShieldBelt_C", RoundMask=1,InitialCost=8000)
++AvailableLoadout=(ItemTag="ArmorThighpads",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Armor/Armor_ThighPads.Armor_ThighPads_C", RoundMask=1,InitialCost=1500)
++AvailableLoadout=(ItemTag="JumpBoots",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Powerups/BP_JumpBoots.BP_JumpBoots_C", RoundMask=1,InitialCost=9000)
++AvailableLoadout=(ItemTag="BerserkPowerup",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Powerups/BP_Berserk.BP_Berserk_C", RoundMask=1,InitialCost=10000)
++AvailableLoadout=(ItemTag="InvisPowerup",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Powerups/BP_Invis.BP_Invis_C", RoundMask=1,InitialCost=10000)
++AvailableLoadout=(ItemTag="AmpPowerup",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Powerups/BP_UDamage.BP_UDamage_C", RoundMask=1,InitialCost=15000)
++AvailableLoadout=(ItemTag="KegPowerup",ItemClassStringRef="/Game/RestrictedAssets/Pickups/Health/Health_Large.Health_Large_C", RoundMask=1,InitialCost=15000)
 
 +AvailableLoadoutPacks=(PackInfo=(PackTag="Solid",PackTitle="Solid"),SpawnHealthModifier=50,ItemsInPack=("ImpactHammer","ShockRifle","FlakCannon","ArmorChest"))
 +AvailableLoadoutPacks=(PackInfo=(PackTag="Quick",PackTitle="Quick"),SpawnHealthModifier=0,ItemsInPack=("ImpactHammer","BioRifle","LinkGun"))
@@ -443,9 +442,11 @@ bTestDailyChallenges=false
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_ConsoleMessages"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_GameMessages"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
-+RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
+;RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTCTFScoreboard"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Intermission"
-+RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_TeamLives.bpHW_TeamLives_C"
+;RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_TeamLives.bpHW_TeamLives_C"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_GauntletStatus.bpHW_GauntletStatus_C"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHudWidget_LivesRemaining"
+
