#codereview steve.polge,joe.wilcox
- Added power-up button hold to activate
- Added HUD elements to track button holding
- Added new type to support adding overlays and HUD elemnts for the Activated PowerUp system.
- Changing QuickStats to pull new power up hold button instead of ToggleTranslocator button

[CL 2933769 by Thomas Ross in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultInput.ini
+++ b/UnrealTournament/Config/DefaultInput.ini
@@ -49,6 +49,8 @@ bUseMouseForTouch=False
 +ActionMappings=(ActionName="StopAltFire", Key=RightMouseButton)
 +ActionMappings=(ActionName="StartAltFire", Key=Gamepad_LeftTrigger)
 +ActionMappings=(ActionName="StopAltFire", Key=Gamepad_LeftTrigger)
++ActionMappings=(ActionName="StartActivatePowerup", Key=Q)
++ActionMappings=(ActionName="StopActivatePowerup", Key=Q)
 
 +ActionMappings=(ActionName="SlowerEmote",Key=MouseScrollDown)
 +ActionMappings=(ActionName="FasterEmote",Key=MouseScrollUp)
