Reverted out the hub window changes for now.
[CL 2934900 by Joe Wilcox in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -199,7 +199,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_ConsoleMessages"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_GameMessages"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
-;RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTScoreboard"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
 
@@ -213,7 +213,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_ConsoleMessages"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_GameMessages"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
-;RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
 
 [/Script/UnrealTournament.UTHUD_TeamDM]
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_Paperdoll.bpHW_Paperdoll_C"
@@ -230,7 +230,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_ConsoleMessages"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_GameMessages"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
-;RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTTeamScoreboard"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
 
@@ -252,7 +252,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_ConsoleMessages"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_GameMessages"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
-;RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTDuelScoreboard"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
 
@@ -271,7 +271,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_ConsoleMessages"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_GameMessages"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
-;RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_SpectatorShowdown"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_SpectatorShowdown"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
 
 [/Script/UnrealTournament.UTHUD_CTF]
@@ -288,7 +288,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_ConsoleMessages"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_GameMessages"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
-;RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTCTFScoreboard"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Intermission"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHudWidget_LivesRemaining"
@@ -442,7 +442,7 @@ bTestDailyChallenges=false
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_ConsoleMessages"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_GameMessages"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
-;RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTCTFScoreboard"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Intermission"
 ;RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_TeamLives.bpHW_TeamLives_C"
