--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -99,6 +99,7 @@ InactivePlayerStateLifeSpan=1200
 +GameModeClassAliases=(ShortName="Sample",GameClassName="/SampleGameMode/BP_SampleGameMode.BP_SampleGameMode_C")
 +GameModeClassAliases=(ShortName="TimeDemo",GameClassName="/Game/RestrictedAssets/Blueprints/TimeDemoGameMode.TimeDemoGameMode_C")
 +GameModeClassAliases=(ShortName="Gauntlet",GameClassName="/Script/UnrealTournament.UTGauntletGame")
++GameModeClassAliases=(ShortName="SCTF",GameClassName="/Script/UnrealTournament.UTSCTFGame")
 +GameModeClassAliases=(ShortName="EMPTY",GameClassName="/Script/UnrealTournament.UTEmptyServerGameMode")
 
 [/Script/UnrealTournament.UTDuelGame]
@@ -449,4 +450,24 @@ bTestDailyChallenges=false
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_GauntletStatus.bpHW_GauntletStatus_C"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHudWidget_LivesRemaining"
+
+[/Script/UnrealTournament.UTHUD_SCTF]
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_Paperdoll.bpHW_Paperdoll_C"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_WeaponInfo.bpHW_WeaponInfo_C"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_TeamGameClock.bpHW_TeamGameClock_C"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_WeaponBar.bpHW_WeaponBar_C"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_Powerups.bpHW_Powerups_C"
+!RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_CTFFlagStatus.bpHW_CTFFlagStatus_C"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_WeaponCrosshair"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_DeathMessages"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_PickupMessage"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_ConsoleMessages"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_GameMessages"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTCTFScoreboard"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Intermission"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHudWidget_LivesRemaining"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_QuickStats.bpHW_QuickStats_C"
++RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_GauntletStatus.bpHW_GauntletStatus_C"
 
