Fixed hud widgets not appearing in single flag ctf
[CL 2936888 by Joe Wilcox in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -457,7 +457,7 @@ bTestDailyChallenges=false
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_TeamGameClock.bpHW_TeamGameClock_C"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_WeaponBar.bpHW_WeaponBar_C"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_Powerups.bpHW_Powerups_C"
-!RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_CTFFlagStatus.bpHW_CTFFlagStatus_C"
+;RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_CTFFlagStatus.bpHW_CTFFlagStatus_C"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_WeaponCrosshair"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_DeathMessages"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_PickupMessage"
